--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,10 @@
     width: calc((100% / 5) * 3);
 }
 
+.column-1-3 {
+    width: calc(100% /3);
+}
+
 .justify-cont-r {
     justify-content: right;
 }
@@ -68,3 +72,40 @@ header img {
 }
 
 /* MAIN */
+
+.main-container {
+    margin: 40px auto;
+    max-width: 80%;
+}
+
+.main-container>div {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+main .column-1-3 img {
+    width: 100%;
+}
+
+main .column-1-3 {
+    padding: 10px;
+    margin-bottom: 20px;
+}
+
+.brand {
+    font-size: small;
+}
+
+.model {
+    font-weight: bold;
+    font-size: large;
+}
+
+.price span:first-child {
+    color: red;
+}
+
+.price span:last-child {
+    text-decoration: line-through;
+}
