--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,10 @@
     width: calc(100% /3);
 }
 
+.column-1-2 {
+    width: calc(100% / 2);
+}
+
 .justify-cont-r {
     justify-content: right;
 }
@@ -108,4 +112,48 @@ main .column-1-3 {
 
 .price span:last-child {
     text-decoration: line-through;
+}
+
+/* FOOTER */
+
+footer {
+    background-color: #1A1A1A;
+}
+
+footer .container div {
+    color: white;
+    padding: 10px 0;
+}
+
+footer section {
+    color: white;
+    padding: 20px 0;
+    display: flex;
+}
+
+footer hr {
+    border-color: white;
+}
+
+footer nav a {
+    font-size: small;
+}
+
+footer .column-1-2 nav ul {
+    list-style: none;
+    display: flex;
+}
+
+.column-1-2 nav ul li a {
+    text-decoration: none;
+    color: white;
+    padding-right: 10px;
+}
+
+.column-1-2 i {
+    padding: 0 5px;
+}
+
+footer .column-1-2:last-child {
+    display: flex;
 }
