--- a/css/style.css
+++ b/css/style.css
@@ -114,6 +114,56 @@ main .column-1-3 {
     text-decoration: line-through;
 }
 
+/* DISCOUNT TAG */
+
+.card {
+    position: relative;
+}
+
+.discount-tag {
+    background-color: black;
+    color: white;
+    display: inline-block;
+    padding: 2px 10px;
+    font-size: small;
+}
+
+.red-tag {
+    background-color: red;
+    color: white;
+    position: absolute;
+    bottom: 10%;
+}
+
+.green-tag {
+    background-color: green;
+    color: white;
+    position: absolute;
+    bottom: 10%;
+    left: 20%;
+}
+
+/* HEART */
+
+.heart {
+    position: absolute;
+    right: 0;
+    top: 10%;
+    background-color: white;
+    padding: 5px 10px;
+}
+
+/* OVER */
+
+.hover {
+    position: absolute;
+    display: none;
+}
+
+.card:hover .hover {
+    display: block;
+}
+
 /* FOOTER */
 
 footer {
