--- a/css/style.css
+++ b/css/style.css
@@ -171,12 +171,11 @@ footer {
 }
 
 footer .container div {
-    color: white;
     padding: 10px 0;
+    color: white;
 }
 
 footer section {
-    color: white;
     padding: 20px 0;
     display: flex;
 }
@@ -204,6 +203,6 @@ footer .column-1-2 nav ul {
     padding: 0 5px;
 }
 
-footer .column-1-2:last-child {
-    display: flex;
+footer section>div:last-child {
+    text-align: right;
 }
