--- a/css/style.css
+++ b/css/style.css
@@ -41,8 +41,17 @@
 
 /* HEADER */
 
+main {
+    padding-top: 60px;
+}
+
 header {
     background-color: #FF6800;
+    position: fixed;
+    width: 100%;
+    z-index: 1;
+    top: 0;
+    left: 0;
 }
 
 header .container div {
@@ -120,6 +129,10 @@ main .column-1-3 {
     position: relative;
 }
 
+.tags-container {
+    z-index: 1;
+}
+
 .discount-tag {
     background-color: black;
     color: white;
@@ -153,7 +166,7 @@ main .column-1-3 {
     padding: 5px 10px;
 }
 
-/* OVER */
+/* HOVER */
 
 .hover {
     position: absolute;
@@ -200,7 +213,7 @@ footer .column-1-2 nav ul {
 }
 
 .column-1-2 i {
-    padding: 0 5px;
+    padding-left: 5px;
 }
 
 footer section>div:last-child {
