--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,10 @@ main .column-1-3 img {
     width: 100%;
 }
 
+main .column-1-3 img:hover {
+    display: none;
+}
+
 main .column-1-3 {
     padding: 10px;
     margin-bottom: 20px;
@@ -145,8 +149,12 @@ main .column-1-3 {
     z-index: 1;
 }
 
+.discount-container {
+    position: absolute;
+    bottom: 10%;
+}
+
 .discount-tag {
-    background-color: black;
     color: white;
     display: inline-block;
     padding: 2px 10px;
@@ -155,17 +163,10 @@ main .column-1-3 {
 
 .red-tag {
     background-color: red;
-    color: white;
-    position: absolute;
-    bottom: 10%;
 }
 
 .green-tag {
     background-color: green;
-    color: white;
-    position: absolute;
-    bottom: 10%;
-    left: 20%;
 }
 
 /* HEART */
@@ -176,6 +177,10 @@ main .column-1-3 {
     top: 10%;
     background-color: white;
     padding: 5px 10px;
+}
+
+.heart:hover {
+    background-color: red;
 }
 
 /* HOVER */
