--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ header {
     background-color: #FF6800;
     position: fixed;
     width: 100%;
-    z-index: 1;
+    z-index: 2;
     top: 0;
     left: 0;
 }
@@ -145,13 +145,10 @@ main .column-1-3 {
     position: relative;
 }
 
-.tags-container {
-    z-index: 1;
-}
-
 .discount-container {
     position: absolute;
     bottom: 10%;
+    z-index: 1;
 }
 
 .discount-tag {
@@ -172,26 +169,35 @@ main .column-1-3 {
 /* HEART */
 
 .heart {
+    border: none;
+    font-size: larger;
+
+    background-color: white;
+    padding: 5px 10px;
+
+    cursor: pointer;
+
     position: absolute;
     right: 0;
     top: 10%;
-    background-color: white;
-    padding: 5px 10px;
+    z-index: 1;
 }
 
 .heart:hover {
-    background-color: red;
+    color: #FF6800;
 }
 
 /* HOVER */
 
-.hover {
-    position: absolute;
+.img-2 {
     display: none;
 }
 
-.card:hover .hover {
+.card:hover .img-2 {
     display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 /* FOOTER */
