--- a/css/style.css
+++ b/css/style.css
@@ -187,7 +187,7 @@ main .column-1-3 {
     color: #FF6800;
 }
 
-/* HOVER */
+/* IMG HOVER */
 
 .img-2 {
     display: none;
@@ -216,10 +216,6 @@ footer section {
     display: flex;
 }
 
-footer hr {
-    border-color: white;
-}
-
 footer nav a {
     font-size: small;
 }
@@ -235,8 +231,17 @@ footer .column-1-2 nav ul {
     padding-right: 10px;
 }
 
+.column-1-2 nav ul li a:hover {
+    color: #FF6800;
+    text-decoration: underline;
+}
+
 .column-1-2 i {
     padding-left: 5px;
+}
+
+.column-1-2 i:hover {
+    color: #FF6800;
 }
 
 footer section>div:last-child {
